--- a/StackViewDemo/Base.lproj/Main.storyboard
+++ b/StackViewDemo/Base.lproj/Main.storyboard
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,20 +23,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="yVe-gO-dmE">
-                                <rect key="frame" x="27.5" y="20" width="320" height="204.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="yVe-gO-dmE">
+                                <rect key="frame" x="27.5" y="20" width="320" height="224.5"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1ba-qf-Wz4">
-                                        <rect key="frame" x="40" y="0.0" width="280" height="68.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="1ba-qf-Wz4">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="77.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SAMPLE TEXT1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iOw-Kf-0RG">
-                                                <rect key="frame" x="0.0" y="0.0" width="280" height="48"/>
-                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="40"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SAMPLE TEXT1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="iOw-Kf-0RG">
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="47"/>
+                                                <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="40"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sample text2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IxP-0V-Dyd">
-                                                <rect key="frame" x="0.0" y="48" width="280" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="57" width="320" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -42,27 +44,68 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cvk-yh-Xvp">
-                                        <rect key="frame" x="0.0" y="68.5" width="320" height="136"/>
+                                        <rect key="frame" x="0.0" y="87.5" width="320" height="137"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user1" translatesAutoresizingMaskIntoConstraints="NO" id="3bM-t6-gyv">
-                                                <rect key="frame" x="0.0" y="0.0" width="100" height="136"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user1" translatesAutoresizingMaskIntoConstraints="NO" id="3bM-t6-gyv">
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="137"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="3bM-t6-gyv" secondAttribute="height" multiplier="25:34" id="ep0-2k-hdX"/>
+                                                </constraints>
                                             </imageView>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user1" translatesAutoresizingMaskIntoConstraints="NO" id="DAB-rJ-Nh4">
-                                                <rect key="frame" x="110" y="0.0" width="100" height="136"/>
+                                                <rect key="frame" x="110" y="0.0" width="100" height="137"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="DAB-rJ-Nh4" secondAttribute="height" multiplier="25:34" id="zjt-m7-bSp"/>
+                                                </constraints>
                                             </imageView>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user1" translatesAutoresizingMaskIntoConstraints="NO" id="zgZ-yf-ww4">
-                                                <rect key="frame" x="220" y="0.0" width="100" height="136"/>
+                                                <rect key="frame" x="220" y="0.0" width="100" height="137"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="zgZ-yf-ww4" secondAttribute="height" multiplier="25:34" id="Lq9-YA-8Ne"/>
+                                                </constraints>
                                             </imageView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sample Text3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBJ-QJ-pcY">
+                                <rect key="frame" x="83" y="251.5" width="209" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="NQR-qH-h2A">
+                                <rect key="frame" x="128.5" y="529" width="118" height="70"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u9f-hy-tep">
+                                        <rect key="frame" x="0.0" y="0.0" width="118" height="30"/>
+                                        <color key="backgroundColor" red="1" green="0.18750370669999999" blue="0.32937986499999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="Sign In Facebook"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E9g-rv-O2f">
+                                        <rect key="frame" x="0.0" y="40" width="118" height="30"/>
+                                        <color key="backgroundColor" red="1" green="0.18750370670414218" blue="0.32937986497208016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Sign up">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="yVe-gO-dmE" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="70" id="ILv-nt-fqz"/>
+                            <constraint firstItem="1ba-qf-Wz4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AMA-Mu-Nqn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MBJ-QJ-pcY" secondAttribute="trailing" constant="67" id="EYw-db-GWA"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="E9g-rv-O2f" secondAttribute="bottom" constant="68" id="Mgu-6q-u7c"/>
                             <constraint firstItem="yVe-gO-dmE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TFb-n2-onJ"/>
                             <constraint firstItem="yVe-gO-dmE" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Xje-QH-j3u"/>
+                            <constraint firstItem="IxP-0V-Dyd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jJX-6y-gp3"/>
+                            <constraint firstItem="MBJ-QJ-pcY" firstAttribute="top" secondItem="yVe-gO-dmE" secondAttribute="bottom" constant="7" id="omA-Ao-GaS"/>
+                            <constraint firstItem="MBJ-QJ-pcY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qFM-wV-ePg"/>
+                            <constraint firstItem="cvk-yh-Xvp" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="320:667" id="r4E-lL-Bls"/>
+                            <constraint firstItem="NQR-qH-h2A" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="t7H-ac-LVx"/>
                         </constraints>
                     </view>
                 </viewController>
